src/objects/AB2__AdBookAccountDynamicPropertyValue__c.object
<CustomObject>
    <description>Actual AdBook Dynamic Property Value for a specific Account.</description>
    <fields>
        <fullName>AB2__Account__c</fullName>
        <description>The Account this AdBook UDF applies to</description>
        <inlineHelpText>The Account this AdBook UDF applies to</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>AdBook Account UDF Values</relationshipLabel>
        <relationshipName>AdBookAccountDynamicPropertyValues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AB2__AdBookDynamicProperty__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The AdBook Dynamic Property Type</description>
        <inlineHelpText>The AdBook Dynamic Property Type</inlineHelpText>
        <label>AdBook UDF</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>AdBook UDF should be for Accounts</errorMessage>
            <filterItems>
                <field>AB2__AdBookDynamicProperty__c.AB2__ObjectType__c</field>
                <operation>equals</operation>
                <value>Account</value>
            </filterItems>
            <infoMessage>AdBook UDF should be for Accounts</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AB2__AdBookDynamicProperty__c</referenceTo>
        <relationshipLabel>AdBook Account UDF Values</relationshipLabel>
        <relationshipName>AdBookAccountDynamicPropertyValues</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AB2__DynamicPropertyIsVisible__c</fullName>
        <description>Is the associated AdBook UDF Visible to users?</description>
        <formula>AB2__AdBookDynamicProperty__r.AB2__IsVisible__c</formula>
        <inlineHelpText>Is the associated AdBook UDF Visible to users?</inlineHelpText>
        <label>UDF Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__ListValue__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>List Value</description>
        <inlineHelpText>List Value</inlineHelpText>
        <label>List Value</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>List Value should have the Account object type.</errorMessage>
            <filterItems>
                <field>AB2__AdBookDynamicPropertyListValues__c.AB2__AdBookDynamicPropertyObjectType__c</field>
                <operation>equals</operation>
                <value>Account</value>
            </filterItems>
            <filterItems>
                <field>$Source.AB2__AdBookDynamicProperty__c</field>
                <operation>equals</operation>
                <valueField>AB2__AdBookDynamicPropertyListValues__c.AB2__AdBookDynamicProperty__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AB2__AdBookDynamicPropertyListValues__c</referenceTo>
        <relationshipLabel>AdBook Account UDF Values</relationshipLabel>
        <relationshipName>AdBookAccountDynamicPropertyValues</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AB2__ObjectType__c</fullName>
        <formula>TEXT(AB2__AdBookDynamicProperty__r.AB2__ObjectType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Object Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__Uniqueness__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Concatenation of the Account ID and the Dynamic Property ID.
Used to enforce uniqueness via a field workflow rule that will set the value.</description>
        <inlineHelpText>Used internally to enforce uniqueness for Account Id and UDF Id.</inlineHelpText>
        <label>Uniqueness</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>AdBook Account UDF Value</label>
    <nameField>
        <displayFormat>AUDF-{0000}</displayFormat>
        <label>AdBook Account UDF Value Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AdBook Account UDF Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>